--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
 .container {
     margin: auto;
     width: 50%;
-    border: 3px solid green;
+    border: 3px solid red;
     padding: 10px;
+}
+
+body {
+    background-color: lightblue;
 }
